k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ipt-engineering-fundamentals
  namespace: dev
spec:
  type: ClusterIP
  selector:
    app: ipt-engineering-fundamentals
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
