k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ipt-engineering-fundamentals
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "true"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ipt-engineering-fundamentals-dev.example.com
      secretName: ipt-engineering-fundamentals-dev-tls
  rules:
    - host: ipt-engineering-fundamentals-dev.example.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ipt-engineering-fundamentals
                port:
                  number: 80
